--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,33 @@
 </head>
 <body>
 
-<main id="content">
-    {% block content %}
-    {% endblock %}
-</main>
+    <nav class="navbar navbar-expand-lg sticky-top" id="nav-style">
+        <a class="navbar-brand m-1" id="label">CC</a>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-option nav-link m-1" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-option nav-link m-1" href="/#menu">Menu</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-option nav-link m-1" href="">placeholder</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Carmen's Cupcakery</h1>
+            <p class="lead">Cupcake confections made by Carmen with an extra dash of love.</p>
+        </div>
+    </div>
+
+    <main id="content">
+        {% block content %}
+        {% endblock %}
+    </main>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
