--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,39 @@
-h1 {
-    color: aqua;
+body {
+    vertical-align: center;
+    text-align: right;
+}
+#nav-style {
+    text-align: right;
+}
+.header {
+    height: 200px;
+    vertical-align: center;
+    margin-top: 100px
+}
+.light, a {
+    color: #DED9DB;
+}
+.bg-purple {
+    background-color: #542966;
+    color: #DED9DB;
+}
+.bg-pink, #label {
+    color: #495B4B;
+    background-color: #DED9DB;
+}
+.cupcakes-section {
+    text-align: center;
+}
+
+#label {
+    border-radius: 7px;
+}
+hr {
+    border-top: 10px dotted white;
+    width: 30%;
+}
+.main-image {
+    height: 500px;
+    width: auto;
+    margin-right: 100px;
 }
