--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <title>Cupcakery</title>
 
 </head>
-<body>
+<body class="bg-pink">
 
-    <nav class="navbar navbar-expand-lg sticky-top" id="nav-style">
-        <a class="navbar-brand m-1" id="label">CC</a>
+    <nav class="navbar navbar-expand-lg sticky-top bg-purple" id="nav-style">
+        <a class="navbar-brand m-2 pl-2 pr-2 " id="label">CC</a>
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-option nav-link m-1" href="/">Home</a>
@@ -24,7 +24,7 @@
         </ul>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid bg-purple">
         <div class="container">
             <h1 class="display-4">Carmen's Cupcakery</h1>
             <p class="lead">Cupcake confections made by Carmen with an extra dash of love.</p>
@@ -37,9 +37,11 @@
     </main>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/jquery"></script>
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
+    <script src="../static/cupcakes.js"></script>
 </body>
 </html>
