--- a/templates/cupcakes.html
+++ b/templates/cupcakes.html
@@ -18,14 +18,14 @@
     </div>
 
 
-    <div class="container cupcakes-section mt-5">
+    <div class="container cupcakes-section mt-5 mb-5">
 
         <div class="container w-75">
             <h1>Menu</h1>
             <hr class="width = 30%">
         </div>
 
-        <div class="container" id="menu">
+        <div class="container mt-3 mb-3" id="menu">
             <div class="row row-cols-3" id="menu-list">
 
 
@@ -52,6 +52,49 @@
 
             </div>
         </div>
+    </div>
+
+    <div class="container mt-5" id="add_section">
+
+        <div class="container w-75">
+            <h1 align="">Add a Cupcake</h1>
+            <hr class="width = 30%">
+        </div>
+
+        <form id="new-cupcake-form">
+            <div class="row">
+                <div class="form-group col">
+                    <label for="flavor-des">Flavor: </label>
+                    <input name="flavor" class="form-control" id="flavor-des">
+                </div>
+                <div class="form-group col">
+                    <label for="size">Size: </label>
+                    <select name="size" class="form-control" id="size">
+                        <option>Jumbo</option>
+                        <option>Regular</option>
+                        <option>Mini</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="rating">Rating: </label>
+                    <select name="rating" class="form-control" id="rating">
+                        <option>5</option>
+                        <option>4</option>
+                        <option>3</option>
+                        <option>2</option>
+                        <option>1</option>
+                    </select>
+                </div>
+                 <div class="form-group col">
+                    <label for="image-url">Image URL: </label>
+                    <input name="image" class="form-control" id="image-url">
+                </div>
+            </div>
+            <button type="button" id="add-cupcake" class="btn btn-lg bg-purple">Add!</button>
+        </form>
+
     </div>
 
 
