--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/styles.css">
     <title>Cupcakery</title>
 
 </head>
+
 <body class="bg-pink">
 
     <nav class="navbar navbar-expand-lg sticky-top bg-purple" id="nav-style">
@@ -19,13 +21,13 @@
                 <a class="nav-option nav-link m-1" href="/#menu">Menu</a>
             </li>
             <li class="nav-item">
-                <a class="nav-option nav-link m-1" href="">placeholder</a>
+                <a class="nav-option nav-link m-1" href="/#add_section">Add a Cupcake</a>
             </li>
         </ul>
     </nav>
 
     <div class="jumbotron jumbotron-fluid bg-purple">
-        <div class="container">
+        <div class="container text-right">
             <h1 class="display-4">Carmen's Cupcakery</h1>
             <p class="lead">Cupcake confections made by Carmen with an extra dash of love.</p>
         </div>
@@ -35,6 +37,10 @@
         {% block content %}
         {% endblock %}
     </main>
+
+    <script>
+        $(document).ready(displayCupcakes());
+    </script>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
