unable to connect api and app

--- a/templates/cupcakes.html
+++ b/templates/cupcakes.html
@@ -28,27 +28,7 @@
         <div class="container mt-3 mb-3" id="menu">
             <div class="row row-cols-3" id="menu-list">
 
-
-{#                {% for cupcake in cupcakes %}#}
-
-{#                    <div class="col">#}
-{#                        <div class="card" style="width: 18rem;">#}
-{#                          <img src="{{ cupcake.image }}" class="card-img-top" alt="cupcake photo">#}
-{#                          <div class="card-body">#}
-{#                            <h5 class="card-title">{{ cupcake.flavor }}</h5>#}
-{#                          </div>#}
-{#                          <ul class="list-group list-group-flush">#}
-{#                            <li class="list-group-item">Size: {{ cupcake.size }}</li>#}
-{#                            <li class="list-group-item">Rating: {{ cupcake.rating }}</li>#}
-{#                          </ul>#}
-{#                          <div class="card-body">#}
-{#                            <button href="/api/cupcakes/{{ cupcake.id }}" class="btn">Card link</button>#}
-{#                            <a href="#" class="card-link">Another link</a>#}
-{#                          </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{##}
-{#                {% endfor %}#}
+{#                add cupcakes from API#}
 
             </div>
         </div>
