--- a/templates/cupcakes.html
+++ b/templates/cupcakes.html
@@ -36,19 +36,19 @@
 
     <div class="container mt-5" id="add_section">
 
-        <div class="container w-75">
+        <div class="container w-75 mt-5">
             <h1 align="">Add a Cupcake</h1>
             <hr class="width = 30%">
         </div>
 
-        <form id="new-cupcake-form">
+        <form id="new-cupcake-form" class="text-left w-75 mx-auto mt-5">
             <div class="row">
                 <div class="form-group col">
-                    <label for="flavor-des">Flavor: </label>
-                    <input name="flavor" class="form-control" id="flavor-des">
+                    <label for="flavor" class="h6">Flavor: </label>
+                    <input name="flavor" class="form-control" id="flavor">
                 </div>
                 <div class="form-group col">
-                    <label for="size">Size: </label>
+                    <label for="size" class="h6">Size: </label>
                     <select name="size" class="form-control" id="size">
                         <option>Jumbo</option>
                         <option>Regular</option>
@@ -58,7 +58,7 @@
             </div>
             <div class="row">
                 <div class="form-group col">
-                    <label for="rating">Rating: </label>
+                    <label for="rating" class="h6">Rating: </label>
                     <select name="rating" class="form-control" id="rating">
                         <option>5</option>
                         <option>4</option>
@@ -68,8 +68,8 @@
                     </select>
                 </div>
                  <div class="form-group col">
-                    <label for="image-url">Image URL: </label>
-                    <input name="image" class="form-control" id="image-url">
+                    <label for="image" class="h6">Image URL: </label>
+                    <input name="image" class="form-control" id="image">
                 </div>
             </div>
             <button type="button" id="add-cupcake" class="btn btn-lg bg-purple">Add!</button>
