--- a/templates/details.html
+++ b/templates/details.html
@@ -17,8 +17,8 @@
 {#                    <li class="list-group-item">Rating: {{ cupcake.rating }}</li>#}
 {#                </ul>#}
 {#                <div class="card-body">#}
-{#                    <a href="#" class="card-link">Card link</a>#}
-{#                    <a href="#" class="card-link">Another link</a>#}
+{#                    <a href="#" class="card-link">Delete</a>#}
+{#                    <a href="#" class="card-link">Details</a>#}
 {#                </div>#}
 {#            </div>#}
 {#        </div>#}
