--- a/templates/cupcakes.html
+++ b/templates/cupcakes.html
@@ -37,7 +37,7 @@
     <div class="container mt-5" id="add_section">
 
         <div class="container w-75 mt-5">
-            <h1 align="">Add a Cupcake</h1>
+            <h1>Add a Cupcake</h1>
             <hr class="width = 30%">
         </div>
 
@@ -60,11 +60,11 @@
                 <div class="form-group col">
                     <label for="rating" class="h6">Rating: </label>
                     <select name="rating" class="form-control" id="rating">
-                        <option>5</option>
-                        <option>4</option>
-                        <option>3</option>
-                        <option>2</option>
                         <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
                 </div>
                  <div class="form-group col">
