--- a/templates/cupcakes.html
+++ b/templates/cupcakes.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="container mt-3 mb-3" id="menu">
-            <div class="row row-cols-3" id="menu-list">
+            <div class="row row-cols-1 row-cols-md-3" id="menu-list">
 
 {#                add cupcakes from API#}
 
